MAJ files and test

--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -15,7 +15,7 @@
                 <form method="POST" class="form-group text-white-75 font-weight-bold mb-5">
                     {% csrf_token %}
                     {{ form|crispy }}
-                    <button type="submit" class="btn btn-primary btn-xl js-scroll-trigger">Inscription</button>
+                    <button type="submit" class="btn btn-primary btn-xl js-scroll-trigger" id="register">Inscription</button>
                 </form>
                 <hr class="divider my-4"/>
         </div>
