--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -18,7 +18,7 @@
                     <div class="form-group text-center">
                                 <small><p>Pas encore inscrit?</p></small><a href="{% url 'account:register' %}">Inscription</a>
                     </div>
-                    <button type="submit" class="btn btn-primary btn-xl js-scroll-trigger">Connection</button><br>
+                    <button type="submit" class="btn btn-primary btn-xl js-scroll-trigger" id="connection">Connection</button><br>
                 </form>
             </div>
         </div>
