--- a/catalogue/templates/catalogue/my_page.html
+++ b/catalogue/templates/catalogue/my_page.html
@@ -2,16 +2,44 @@
 {% load static %}
 
 {% block content %}
-<header class="masthead">
-<div class="container h-50">
-    <div class="row h-100 align-items-center justify-content-center text-center">
-        <div class="col-lg-10 align-self-end">
-            <h2 class="text-uppercase text-white font-weight-bold">Bonjour, {{ user.username }} !</h2>
-            <hr class="divider my-4"/>
-            <h4 class="text-uppercase text-white font-weight-bold">Votre adresse mail : {{ user.email }}</h4>
-            <hr class="divider my-4"/>
+<header class="masthead-search h-50">
+    <div class="container h-50">
+        <div class="row h-100 align-items-center justify-content-center text-center">
+            <div class="col-lg-10 align-self-end">
+                <h2 class="text-uppercase text-white font-weight-bold">Bonjour, {{ user.username }} !</h2>
+                <hr class="divider my-4"/>
+                <h4 class="text-uppercase text-white font-weight-bold">Votre adresse mail : {{ user.email }}</h4>
+                <hr class="divider my-4"/>
+
+            </div>
         </div>
     </div>
-</div>
 </header>
+<h3 class="text-uppercase text-center  font-weight-bold">Vos 10 dernières recherches:</h3>
+<div class="container my-auto">
+    <div class="row h-100 align-items-center justify-content-center text-center">
+        <table class="table">
+            <thead class="thead-dark">
+            <tr>
+                <th>Recherche</th>
+                <th>Date</th>
+                <th>Lien</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for query in history %}
+            <tr>
+                <td>{{query.query}}</td>
+                <td>{{query.date}}</td>
+                <td><h5><a href="/search/?query={{query.query}}"><img width="15" height="15"
+                                                                      src="{% static 'catalogue/assets/img/lien.svg' %}"></a>
+                </h5></td>
+            </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
+</div>
+
+
 {% endblock %}
